# devpi-process

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  pyproject.toml  setup.cfg  tox.ini  tox.toml  whitelist.txt
.github/: FUNDING.yml
.github/workflows/: check.yaml  check.yml  release.yaml  release.yml
src/devpi_process/: __init__.py
src/pytest_devpi/: __init__.py  version.py
tests/: example.py  test_devpi.py  test_devpi_process.py
tests/demo_pkg_inline/: build.py  pyproject.toml
