[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs>=0.3",
  "hatchling>=1.18",
]

[project]
name = "devpi-process"
description = "devpi process provides a programmatic API to create and use a devpi server process"
readme.content-type = "text/markdown"
readme.file = "README.md"
keywords = [
  "environments",
  "isolated",
  "testing",
  "virtual",
]
license = "MIT"
maintainers = [{ name = "Bern치t G치bor", email = "gaborjbernat@gmail.com" }]
authors = [{ name = "Bern치t G치bor", email = "gaborjbernat@gmail.com" }]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: tox",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities",
]
dynamic = [
  "version",
]
dependencies = [
  "devpi-client>=6.0.5",
  "devpi-server>=6.9.2",
  'typing-extensions>=4.7.1; python_version < "3.11"',
]
optional-dependencies.test = [
  "covdefaults>=2.3",
  "httpx>=0.24.1",
  "pytest>=7.4",
  "pytest-cov>=4.1",
]
urls.Homepage = "https://github.com/tox-dev/devpi-process#readme"
urls.Source = "https://github.com/tox-dev/devpi-process"
urls.Tracker = "https://github.com/tox-dev/devpi-process/issues"

[tool.hatch]
build.hooks.vcs.version-file = "src/devpi_process/_version.py"
version.source = "vcs"

[tool.black]
line-length = 120

[tool.ruff]
select = ["ALL"]
line-length = 120
target-version = "py38"
isort = {known-first-party = ["devpi_process"], required-imports = ["from __future__ import annotations"]}
ignore = [
  "ANN101",  # no typoe annotation for self
  "ANN401",  # allow Any as type annotation
  "D203",  # `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible
  "D212",  # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible
  "S104",  # Possible binding to all interface
]
[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
  "S101",  # asserts allowed in tests...
  "FBT",  # don"t care about booleans as positional arguments in tests
  "INP001", # no implicit namespace
  "D",  # don"t care about documentation in tests
  "S603",  # `subprocess` call: check for execution of untrusted input
  "PLR2004",  # Magic value used in comparison, consider replacing with a constant variable
]

[tool.coverage]
html.show_contexts = true
html.skip_covered = false
paths.source = [
  "src",
  ".tox*/*/lib/python*/site-packages",
  ".tox*/pypy*/site-packages",
  ".tox*\\*\\Lib\\site-packages",
  "*/src",
  "*\\src",
]
report.fail_under = 98
report.omit = []
run.parallel = true
run.plugins = ["covdefaults"]

[tool.mypy]
python_version = "3.11"
show_error_codes = true
strict = true
