[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs>=0.5",
  "hatchling>=1.27",
]

[project]
name = "devpi-process"
description = "devpi process provides a programmatic API to create and use a devpi server process"
readme.content-type = "text/markdown"
readme.file = "README.md"
keywords = [
  "environments",
  "isolated",
  "testing",
  "virtual",
]
license = "MIT"
maintainers = [
  { name = "Bern치t G치bor", email = "gaborjbernat@gmail.com" },
]
authors = [
  { name = "Bern치t G치bor", email = "gaborjbernat@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: tox",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities",
]
dynamic = [
  "version",
]
dependencies = [
  "devpi-client>=7.2",
  "devpi-server>=6.17",
  "typing-extensions>=4.15; python_version<'3.11'",
]
optional-dependencies.testing = [
  "covdefaults>=2.3",
  "httpx>=0.28.1",
  "pytest>=8.4.2",
  "pytest-cov>=7",
]
urls.Homepage = "https://github.com/tox-dev/devpi-process#readme"
urls.Source = "https://github.com/tox-dev/devpi-process"
urls.Tracker = "https://github.com/tox-dev/devpi-process/issues"

[tool.hatch]
build.hooks.vcs.version-file = "src/devpi_process/_version.py"
version.source = "vcs"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
format.preview = true
format.docstring-code-line-length = 100
format.docstring-code-format = true
lint.select = [
  "ALL",
]
lint.ignore = [
  "ANN401", # allow Any as type annotation
  "COM812", # Conflict with formatter
  "CPY",    # No copyright statements
  "D203",   # `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible
  "D212",   # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible
  "DOC",    # not supported
  "ISC001", # Conflict with formatter
  "RUF067", # `__init__` module should only contain docstrings and re-exports
  "S104",   # Possible binding to all interface
]
lint.per-file-ignores."tests/**/*.py" = [
  "D",       # don't care about documentation in tests
  "FBT",     # don't care about booleans as positional arguments in tests
  "INP001",  # no implicit namespace
  "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
  "S101",    # asserts allowed in tests
  "S603",    # `subprocess` call: check for execution of untrusted input
]
lint.isort = { known-first-party = [
  "devpi_process",
], required-imports = [
  "from __future__ import annotations",
] }
lint.preview = true

[tool.codespell]
builtin = "clear,usage,en-GB_to_en-US"
write-changes = true
count = true

[tool.pyproject-fmt]
max_supported_python = "3.13"

[tool.coverage]
html.show_contexts = true
html.skip_covered = false
paths.source = [
  "src",
  ".tox*/*/lib/python*/site-packages",
  ".tox*/pypy*/site-packages",
  ".tox*\\*\\Lib\\site-packages",
  "*/src",
  "*\\src",
]
report.fail_under = 98
report.omit = []
run.parallel = true
run.plugins = [
  "covdefaults",
]

[tool.mypy]
python_version = "3.12"
show_error_codes = true
strict = true
