[metadata]
name = devpi_process
description = devpi process provides a programmatic API to create and use a devpi server process
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gaborbernat/devpi_process
maintainer = Bernat Gabor
maintainer_email = gaborjbernat@gmail.com
license = MIT
license_file = LICENSE.txt
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Utilities
keywords = devpi, programmatic
project_urls =
    Source=https://github.com/gaborbernat/devpi-process
    Tracker=https://github.com/gaborbernat/devpi-process

[options]
packages = find:
install_requires =
    devpi-client>=5.2
    devpi-server>=6
python_requires = >=3.6
include_package_data = True
package_dir =
    =src
zip_safe = True

[options.packages.find]
where = src

[options.extras_require]
test =
    coverage>=5
    httpx>=0.18
    pytest>=6

[options.package_data]
devpi_process = py.typed

[sdist]
formats = gztar

[flake8]
max-complexity = 22
max-line-length = 120
unused-arguments-ignore-abstract-functions = true
noqa-require-code = true
dictionaries = en_US,python,technical
ignore =
    E203 # whitespace before :

[coverage:run]
source =
    ${_COVERAGE_SRC}
    ${_COVERAGE_TEST}
parallel = True
branch = True
dynamic_context = test_function

[coverage:report]
fail_under = 100
skip_covered = true
show_missing = true

[coverage:html]
show_contexts = True
skip_covered = False
skip_empty = False

[coverage:paths]
source =
    src
    .tox*/*/lib/python*/site-packages
    .tox*/pypy*/site-packages
    .tox*\*\Lib\site-packages\
    */src
    *\src

[tool:pytest]
addopts = -ra --showlocals
testpaths = tests
junit_family = xunit2

[mypy]
python_version = 3.7
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True
show_error_codes = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = False
warn_no_return = True
warn_return_any = True
implicit_reexport = False
strict_equality = True
warn_unused_configs = True
pretty = True

[mypy-httpx.*]
ignore_missing_imports = True
