[metadata]
name = devpi_process
description = devpi process provides a programmatic API to create and use a devpi server process
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tox-dev/devpi-process
maintainer = Bernat Gabor
maintainer_email = gaborjbernat@gmail.com
license = MIT
license_file = LICENSE.txt
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries
    Topic :: Utilities
keywords = devpi, programmatic
project_urls =
    Source=https://github.com/tox-dev/devpi-process
    Tracker=https://github.com/tox-dev/devpi-process

[options]
packages = find:
install_requires =
    devpi-client>=6.0.4
    devpi-server>=6.8
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = True

[options.packages.find]
where = src

[options.extras_require]
test =
    covdefaults>=2.3
    httpx>=0.24
    pytest>=7.3.1
    pytest-cov>=4

[options.package_data]
devpi_process = py.typed

[sdist]
formats = gztar

[coverage:run]
plugins = covdefaults
parallel = true

[coverage:paths]
src =
    src
    .tox/*/lib/python*/site-packages
    .tox/pypy*/site-packages
    .tox\*\Lib\site-packages\
    */src
    *\src
other =
    .
    */devpi-process
    *\devpi-process

[coverage:report]
fail_under = 100

[coverage:html]
show_contexts = true
skip_covered = false
